--- a/Oct/2019-10-17.md
+++ b/Oct/2019-10-17.md
@@ -1,1 +1,6 @@
-# first record of the repo
+# first record of the rep
+
++ Source: CVPR 2019
++ Institute:  MIT
++ Title:  [Data augmentation using learned transformations for one-shot medical image segmentation](http://arxiv.org/abs/1902.09383)
+
