add md file the info

--- a/Oct/2019-10-17.md
+++ b/Oct/2019-10-17.md
@@ -4,3 +4,9 @@
 + Institute:  MIT
 + Title:  [Data augmentation using learned transformations for one-shot medical image segmentation](http://arxiv.org/abs/1902.09383)
 
+
+
+yesterday, because of the unknown reason for git operation , I lost my file for the note, I don't know what happened .
+
+![lost file](D:\GitHub\record\images\lost_file.png)
+
